--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,12 @@
 	  <button class="btn btn-info">Letters</button>
 	  <button class="btn btn-info">Rating</button>
   </div>
+  <div id="scoreText" style="display: none">Score: <span id="score">0</span><br/>Attempts left: <span id="attemptsLeft">7</span></div>
+  <h2 id="hint" style="display: none">Hint: <span id="descrip"></span></h2>
+  <div id="word" class="container">
+  </div>
+  <div id="lettersBtns" class="container">
+  </div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
