--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
-
-
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/StyleSheet.css">
@@ -16,6 +12,7 @@
 	  <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-app.js"></script>
 	  <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-auth.js"></script>
 	  <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-firestore.js"></script>
+	  <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-functions.js"></script>
   </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -27,6 +24,7 @@
       <div class="btn-group mr-auto" role="group" aria-label="Buttons">
         <a class="btn btn-outline-info" href="index.html" role="button">Home</a>
         <a class="btn btn-outline-info" href="leaderboard.html" role="button">Leaderboard</a>
+	    <a id="adminBtn" class="btn btn-outline-info" href="" role="button" style="display: none">Admin</a>
       </div>
       <div id="account" class="form-inline my-2 mr-2 my-lg-0" style="display: none">
         <a class="btn btn-outline-info" role="button" href="account.html"><span id="accountText"></span></a>
@@ -39,10 +37,11 @@
       </div>
     </div>
   </nav>
+  Order by:
+  <button class="btn btn-info" id="letterSortBtn">Letters</button>
+  <button class="btn btn-info" id="ratingSortBtn">Rating</button>
   <div id="wordList">
-	Order by:
-	  <button class="btn btn-info">Letters</button>
-	  <button class="btn btn-info">Rating</button>
+
   </div>
   <div id="scoreText" style="display: none">Score: <span id="score">0</span><br/>Attempts left: <span id="attemptsLeft">7</span></div>
   <h2 id="hint" style="display: none">Hint: <span id="descrip"></span></h2>
