--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -4,16 +4,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-
-
-
-
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/StyleSheet.css">
-	<title>Leader Boards</title>
+	<title>hangman</title>
 
-	<script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-firestore.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-functions.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -23,12 +22,11 @@
 	</button>
 	<div class="collapse navbar-collapse" id="MemeSqrNavbar">
 		<div class="btn-group mr-auto" role="group" aria-label="Buttons">
-			<a class="btn btn-outline-info" href="#.html" role="button">Home</a>
-			<a class="btn btn-outline-info" id="play" href="#.html" role="button">Start</a>
+			<a class="btn btn-outline-info" href="index.html" role="button">Home</a>
 			<a class="btn btn-outline-info" href="leaderboard.html" role="button">Leaderboard</a>
 		</div>
 		<div id="account" class="form-inline my-2 mr-2 my-lg-0" style="display: none">
-			<a class="btn btn-outline-info" role="button" href="account.html"><span id="accountText"></span></a>
+			<span id="accountText"></span>
 		</div>
 		<div id="signout" class="form-inline my-2 my-lg-0" style="display: none">
 			<button class="btn btn-outline-danger" type="button">Sign out</button>
@@ -39,6 +37,25 @@
 		</div>
 	</div>
 </nav>
-
+<div class="container">
+	<div class="row">
+		<div class="col-md-6">
+			Highest Total Score
+			<button class="btn btn-info" id="highScoreSortBtn">Sort</button>
+			<div id="highScoreList" style="background-color: #039be5"></div>
+		</div>
+		<div class="col-md-6">
+			First Play Top Score
+			<button class="btn btn-info" id="firstPlaySortBtn">Sort</button>
+			<div id="firstPlayList" style="background-color: #ffa100"></div>
+		</div>
+	</div>
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="js/model.js"></script>
+<script src="js/Leaderboard/leaderboardView.js"></script>
+<script src="js/Leaderboard/leaderboardController.js"></script>
 </body>
 </html>
