--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 	    <a id="adminBtn" class="btn btn-outline-info" href="" role="button" style="display: none">Admin</a>
       </div>
       <div id="account" class="form-inline my-2 mr-2 my-lg-0" style="display: none">
-        <a class="btn btn-outline-info" role="button" href="account.html"><span id="accountText"></span></a>
+        <span id="accountText"></span>
       </div>
       <div id="signout" class="form-inline my-2 my-lg-0" style="display: none">
         <button class="btn btn-outline-danger" type="button">Sign out</button>
@@ -37,12 +37,13 @@
       </div>
     </div>
   </nav>
-  Order by:
-  <button class="btn btn-info" id="letterSortBtn">Letters</button>
-  <button class="btn btn-info" id="ratingSortBtn">Rating</button>
-  <div id="wordList">
-
+  <div id="gamesList">Word List! <br>Order by:
+    <button class="btn btn-info" id="letterSortBtn">Letters</button>
+    <button class="btn btn-info" id="ratingSortBtn">Rating</button>
   </div>
+
+
+  <div id="wordList"></div>
   <div id="scoreText" style="display: none">Score: <span id="score">0</span><br/>Attempts left: <span id="attemptsLeft">7</span></div>
   <h2 id="hint" style="display: none">Hint: <span id="descrip"></span></h2>
   <div id="word" class="container">
