--- a/public/login.html
+++ b/public/login.html
@@ -23,7 +23,7 @@
 			<a class="btn btn-outline-info" href="#" role="button">Leaderboard</a>
 		</div>
 		<div id="account" class="form-inline my-2 mr-2 my-lg-0" style="display: none">
-			<a class="btn btn-outline-info" role="button" href="account.html"><span id="accountText"></span></a>
+			<span id="accountText"></span>
 		</div>
 		<div id="signout" class="form-inline my-2 my-lg-0" style="display: none">
 			<button class="btn btn-outline-danger" type="button">Sign out</button>
